# SakuraAgentTeam

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  deploy.sh
.github/workflows/: ci.yml  desktop-build.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  sakura_backend_launcher.py
backend/app/: __init__.py
backend/app/agents/: __init__.py  backend_agent.py  base.py  coordinator.py  deployment_agent.py  design_agent.py  frontend_agent.py  requirements_agent.py  review_agent.py  testing_agent.py  types.py
backend/app/agents/registry/: __init__.py  academic.py  base.py  creative.py  design.py  extended.py  extra.py  industry.py  loader.py  presets.py  qa.py  research.py  strategy.py  tech.py
backend/app/api/: __init__.py  connectors.py  main.py  public_stats.py  routes.py  teams.py
backend/app/auth/: database.py  dependency.py  jwt_utils.py  models.py  routes.py
backend/app/collaboration/: __init__.py  models.py  store.py
backend/app/core/: config.py  logging.py  sandbox.py
backend/app/foundation/: __init__.py  experience.py  git_repo.py  project.py
backend/app/foundation/llm/: __init__.py  anthropic.py  base.py  context_compressor.py  litellm_provider.py  meter.py  openai.py
backend/app/foundation/mcp/: __init__.py  client.py  config.py
backend/app/foundation/skills/: __init__.py  base.py  builtin.py  loader.py  markdown_loader.py
backend/app/foundation/tools/: __init__.py  base.py  dev_skills.py  file_edit.py  file_ops.py  glob_tool.py  grep_tool.py  shell.py  shell_run.py  skill_tool.py  sub_agent.py
backend/app/history/: models.py  routes.py
backend/app/llm_providers/: async_helpers.py  models.py  registry.py  routes.py
backend/app/orchestration/: __init__.py  agent_team.py  collaboration_state.py  dynamic.py  engine.py  eventbus.py  finalizer.py  graph_engine.py  output_contracts.py  planner.py  session.py  workflows.py
backend/app/submissions/: models.py  routes.py
backend/cli/: __init__.py  __main__.py  client.py  config.py  main.py  output.py  repl.py
backend/scripts/: debug_agent.py  llm_connect_check.py  test_repl_e2e.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_connectors.py  test_deployment_agent.py  test_e2e_workflow.py  test_litellm_provider.py  test_llm.py  test_tools.py
desktop/: build.js  main.js  package-lock.json  package.json  preload.js
docs/: AGENT_COLLABORATION_REWORK_PLAN.md  AGENT_GUIDE.md  CLI.md  COLLABORATION_MODES.md  CONTEST_POST.md  DEPLOY.md  INSTALL.md  OPENDESIGN_REFERENCE.md  USER_LLM.md  VSCODE_EXTENSION.md  architecture.md  coverage.md  demo.md  neat-freak.md  references.md  usage.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
infra/: docker-compose.yml  nginx-sakura.conf
infra/docker/: sandbox.Dockerfile
packaging/macos/: Info.plist  build.sh  build_dmg.sh
packaging/windows/: build.ps1  sakura-installer.iss
scripts/: deploy-to-team.sh  gen_favicon_emoji.py  install.ps1  install.sh  server-logs.sh  server-start.sh  server-stop.sh  start.ps1  start.sh  verify_progress.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
(+22 files in other folders)
